[package]
name = "css-validator-client"
version = "0.1.0"
authors = ["Zoltan Kovari"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zkoevaari/css-validator-client.git"

[dependencies]
percent-encoding = "2.3"
ureq = "3.0"
url-builder = "0.1"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    "cargo",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]
